cluster/apps/miracle/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miracle
  namespace: miracle
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
  selector:
    app: miracle
