cluster/apps/miracle/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
  namespace: miracle
  annotations:
    cloudflare-operator.io/type: CNAME
    cloudflare-operator.io/content: ${BASE_DOMAIN}
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
spec:
  rules:
    - host: miracle.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miracle
                port:
                  name: http
